{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 523,
  "lineage": "0d739ae1-ad67-068a-e624-bf068a4bafa5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "loljoa2-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055dd8a4ab6d37dcf",
            "association_id": "eipassoc-01205df4d58c39e2e",
            "domain": "vpc",
            "id": "eipalloc-055dd8a4ab6d37dcf",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-09372c6d5182aec47",
            "private_dns": "ip-192-168-10-122.ap-northeast-2.compute.internal",
            "private_ip": "192.168.10.122",
            "public_dns": "ec2-13-125-185-211.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.185.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "loljoa2-nat-eip"
            },
            "tags_all": {
              "Name": "loljoa2-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "loljoa2-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033a6a056910d1137",
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:instance/i-0053633982d5f7bf1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0053633982d5f7bf1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "loljoa2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04e71d8865249c57a",
            "private_dns": "ip-192-168-10-253.ap-northeast-2.compute.internal",
            "private_ip": "192.168.10.253",
            "public_dns": "ec2-54-180-126-41.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.126.41",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0db7a7e22a6d066b4",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c80f522a3c5a464d",
            "tags": {
              "Name": "loljoa2-bastion"
            },
            "tags_all": {
              "Name": "loljoa2-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054ab973c77caa578"
            ]
          },
          "dependencies": [
            "aws_key_pair.loljoa2-key",
            "aws_security_group.loljoa2-bastion-sg",
            "aws_subnet.loljoa2-pub-sub",
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "loljoa2-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0454bb2fefc7de534",
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:instance/i-0f68bb3ba539a0da1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f68bb3ba539a0da1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "loljoa2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa4ba11555085c54",
            "private_dns": "ip-192-168-10-74.ap-northeast-2.compute.internal",
            "private_ip": "192.168.10.74",
            "public_ip": "13.209.80.105",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040f219596db55e04",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c80f522a3c5a464d",
            "tags": {
              "Name": "loljoa2-jenkins"
            },
            "tags_all": {
              "Name": "loljoa2-jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054ab973c77caa578"
            ]
          },
          "dependencies": [
            "aws_key_pair.loljoa2-key",
            "aws_security_group.loljoa2-bastion-sg",
            "aws_subnet.loljoa2-pub-sub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "loljoa2-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:internet-gateway/igw-03aecb646c6ab7bb5",
            "id": "igw-03aecb646c6ab7bb5",
            "owner_id": "048987469347",
            "tags": {
              "Name": "loljoa2-igw"
            },
            "tags_all": {
              "Name": "loljoa2-igw"
            },
            "vpc_id": "vpc-0d59c77393ab0377d"
          },
          "dependencies": [
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "loljoa2-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055dd8a4ab6d37dcf",
            "connectivity_type": "public",
            "id": "nat-032531168ed5ad5ad",
            "network_interface_id": "eni-09372c6d5182aec47",
            "private_ip": "192.168.10.122",
            "public_ip": "13.125.185.211",
            "subnet_id": "subnet-0c80f522a3c5a464d",
            "tags": {
              "Name": "loljoa2-nat"
            },
            "tags_all": {
              "Name": "loljoa2-nat"
            }
          },
          "dependencies": [
            "aws_eip.loljoa2-nat-eip",
            "aws_subnet.loljoa2-pub-sub",
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "loljoa2-pri-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:route-table/rtb-023f3c55c6b5449c0",
            "id": "rtb-023f3c55c6b5449c0",
            "owner_id": "048987469347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-032531168ed5ad5ad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "loljoa2-pri-route"
            },
            "tags_all": {
              "Name": "loljoa2-pri-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d59c77393ab0377d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.loljoa2-nat-eip",
            "aws_nat_gateway.loljoa2-nat",
            "aws_subnet.loljoa2-pub-sub",
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "loljoa2-pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:route-table/rtb-0163b59337553c1d1",
            "id": "rtb-0163b59337553c1d1",
            "owner_id": "048987469347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03aecb646c6ab7bb5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "loljoa2-pub-route"
            },
            "tags_all": {
              "Name": "loljoa2-pub-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d59c77393ab0377d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.loljoa2-igw",
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "loljoa2-pri-routing1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9ebd3a796fdc4fb",
            "route_table_id": "rtb-023f3c55c6b5449c0",
            "subnet_id": "subnet-0b2b282cad20679f8"
          },
          "dependencies": [
            "aws_eip.loljoa2-nat-eip",
            "aws_nat_gateway.loljoa2-nat",
            "aws_route_table.loljoa2-pri-route",
            "aws_subnet.loljoa2-pri-sub-a",
            "aws_subnet.loljoa2-pub-sub",
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "loljoa2-pri-routing2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081b606fd4d4d7437",
            "route_table_id": "rtb-023f3c55c6b5449c0",
            "subnet_id": "subnet-004527fdeb24141d5"
          },
          "dependencies": [
            "aws_eip.loljoa2-nat-eip",
            "aws_nat_gateway.loljoa2-nat",
            "aws_route_table.loljoa2-pri-route",
            "aws_subnet.loljoa2-pri-sub-c",
            "aws_subnet.loljoa2-pub-sub",
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "loljoa2-pub-routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ee03b81896f37dd",
            "route_table_id": "rtb-0163b59337553c1d1",
            "subnet_id": "subnet-0c80f522a3c5a464d"
          },
          "dependencies": [
            "aws_internet_gateway.loljoa2-igw",
            "aws_route_table.loljoa2-pub-route",
            "aws_subnet.loljoa2-pub-sub",
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loljoa2-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:security-group/sg-054ab973c77caa578",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054ab973c77caa578",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "loljoa2-bastion-sg",
            "name_prefix": "",
            "owner_id": "048987469347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loljoa2-bastion-sg"
            },
            "tags_all": {
              "Name": "loljoa2-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d59c77393ab0377d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loljoa2-eks-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:security-group/sg-0bf784ca2593876b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf784ca2593876b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "loljoa2-eks-sg",
            "name_prefix": "",
            "owner_id": "048987469347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loljoa2-eks-sg"
            },
            "tags_all": {
              "Name": "loljoa2-eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d59c77393ab0377d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loljoa2-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:security-group/sg-05ecabee2e9ac2624",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05ecabee2e9ac2624",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "loljoa2-rds-sg",
            "name_prefix": "",
            "owner_id": "048987469347",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d59c77393ab0377d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "loljoa2-eks-cluster-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.0.0/16"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-384832234",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bf784ca2593876b0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.loljoa2-eks-sg",
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "loljoa2-pri-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:subnet/subnet-0b2b282cad20679f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2b282cad20679f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "048987469347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "loljoa2-pri-sub-a",
              "kubernetes.io/cluster/loljoa2-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "loljoa2-pri-sub-a",
              "kubernetes.io/cluster/loljoa2-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d59c77393ab0377d"
          },
          "dependencies": [
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "loljoa2-pri-sub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:subnet/subnet-004527fdeb24141d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004527fdeb24141d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "048987469347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "loljoa2-pri-sub-c",
              "kubernetes.io/cluster/loljoa2-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "loljoa2-pri-sub-c",
              "kubernetes.io/cluster/loljoa2-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d59c77393ab0377d"
          },
          "dependencies": [
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "loljoa2-pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:subnet/subnet-0c80f522a3c5a464d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c80f522a3c5a464d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "048987469347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "loljoa2-pub-sub",
              "kubernetes.io/cluster/loljoa2-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "loljoa2-pub-sub",
              "kubernetes.io/cluster/loljoa2-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0d59c77393ab0377d"
          },
          "dependencies": [
            "aws_vpc.loljoa2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "loljoa2-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:048987469347:vpc/vpc-0d59c77393ab0377d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-07392006d93061068",
            "default_route_table_id": "rtb-00cb2accd20c4d14d",
            "default_security_group_id": "sg-088228290fb9a0ad3",
            "dhcp_options_id": "dopt-00c080c8bd745448d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d59c77393ab0377d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cb2accd20c4d14d",
            "owner_id": "048987469347",
            "tags": {
              "Name": "loljoa2-vpc",
              "kubernetes.io/cluster/loljoa2-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "loljoa2-vpc",
              "kubernetes.io/cluster/loljoa2-eks-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}